--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
 OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE." />
 <link id="faviconLink" rel="shortcut icon" href="favicon.ico">
-<title>我的 TiddlyWiki — 一個非線性的網頁式筆記</title>
+<title>tg-c — tw</title>
 <!--~~ This is a Tiddlywiki file. The points of interest in the file are marked with this pattern ~~--><!--~~ Raw markup ~~-->
 
 
@@ -167,11 +167,19 @@ Error message and password prompt
 
 <li>$:/core</li>
 
+<li>$:/DefaultTiddlers</li>
+
 <li>$:/isEncrypted</li>
 
 <li>$:/language</li>
 
 <li>$:/languages/zh-Hant</li>
+
+<li>$:/SiteSubtitle</li>
+
+<li>$:/SiteTitle</li>
+
+<li>$:/state/showeditpreview</li>
 
 <li>$:/state/tab/sidebar--1835078512</li>
 
@@ -182,6 +190,14 @@ Error message and password prompt
 <li>$:/themes/tiddlywiki/snowwhite</li>
 
 <li>$:/themes/tiddlywiki/vanilla</li>
+
+<li>c</li>
+
+<li>python</li>
+
+<li>shell</li>
+
+<li>tiddlywiki</li>
 
 </ul>
 </p>
@@ -8775,6 +8791,9 @@ Error message and password prompt
     }
 }</pre>
 </div>
+<div created="20180801074636146" modified="20180801074636146" title="$:/DefaultTiddlers">
+<pre></pre>
+</div>
 <div title="$:/isEncrypted">
 <pre>no</pre>
 </div>
@@ -12296,8 +12315,17 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20180731085211221" modified="20180731085211221" title="$:/state/tab/sidebar--1835078512">
-<pre>$:/core/ui/SideBar/Tools</pre>
+<div created="20180801074702130" modified="20180801074702351" title="$:/SiteSubtitle">
+<pre>tw</pre>
+</div>
+<div created="20180801074641338" modified="20180801074743274" title="$:/SiteTitle">
+<pre>tg-c</pre>
+</div>
+<div created="20180801074252370" modified="20180801074252370" title="$:/state/showeditpreview">
+<pre>yes</pre>
+</div>
+<div created="20180731085211221" modified="20180801074203849" title="$:/state/tab/sidebar--1835078512">
+<pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div list="" title="$:/StoryList">
 <pre></pre>
@@ -12315,7 +12343,7 @@ Error message and password prompt
         },
         &quot;$:/info/url/full&quot;: {
             &quot;title&quot;: &quot;$:/info/url/full&quot;,
-            &quot;text&quot;: &quot;file:///home/cameo/homec/app/dropbox/Dropbox/c-db/app/zim/Notebooks/Notes/Home/app/tiddlywiki/tw.html&quot;
+            &quot;text&quot;: &quot;file:///tmp/waygong-note.github.io/index.html&quot;
         },
         &quot;$:/info/url/host&quot;: {
             &quot;title&quot;: &quot;$:/info/url/host&quot;,
@@ -12335,7 +12363,7 @@ Error message and password prompt
         },
         &quot;$:/info/url/pathname&quot;: {
             &quot;title&quot;: &quot;$:/info/url/pathname&quot;,
-            &quot;text&quot;: &quot;/home/cameo/homec/app/dropbox/Dropbox/c-db/app/zim/Notebooks/Notes/Home/app/tiddlywiki/tw.html&quot;
+            &quot;text&quot;: &quot;/tmp/waygong-note.github.io/index.html&quot;
         },
         &quot;$:/info/url/search&quot;: {
             &quot;title&quot;: &quot;$:/info/url/search&quot;,
@@ -12464,6 +12492,26 @@ Error message and password prompt
         }
     }
 }</pre>
+</div>
+<div created="20180801074206508" modified="20180801074227003" tags="" title="c">
+<pre>* [[Learn C - Free Interactive C Tutorial|http://www.learn-c.org/about]]</pre>
+</div>
+<div created="20180801074305890" modified="20180801074311818" tags="" title="python">
+<pre>* [[Learn Python - Free Interactive Python Tutorial|https://www.learnpython.org/]]</pre>
+</div>
+<div created="20180801074248234" modified="20180801074253522" tags="" title="shell">
+<pre>* [[Learn Shell Programming - Free Interactive Shell Programming Tutorial|https://www.learnshell.org/]]</pre>
+</div>
+<div created="20180801074348369" modified="20180801075748230" tags="" title="tiddlywiki">
+<pre>! tutorial
+* [[TiddlyWiki 舞 — 基礎文件正體中文版|http://tw5-zh.tiddlyspot.com/]]
+* [[TiddlyWiki 使用教學中文版 - 以專注於內容的一般使用者觀點出發！|http://web.nlhs.tyc.edu.tw/~lss/wiki/TiddlyWikiTutorialTW.html]]
+!index
+* GettingStarted
+!本網站產生方式
+# 儲存官方的 tiddlywiki 檔案, 命名為 index.html
+# 參考 [[使用 GitHub 免費製作個人網站 為你自己學 Git|https://gitbook.tw/chapters/github/using-github-pages.html]] 用 github page 架好靜態網站
+</pre>
 </div>
 
 </div>
