--- a/index.html
+++ b/index.html
@@ -193,11 +193,25 @@ Error message and password prompt
 
 <li>c</li>
 
+<li>cli</li>
+
+<li>git diff</li>
+
+<li>gui</li>
+
+<li>picocom</li>
+
 <li>python</li>
 
 <li>shell</li>
 
 <li>tiddlywiki</li>
+
+<li>tig</li>
+
+<li>tshark</li>
+
+<li>wireshark</li>
 
 </ul>
 </p>
@@ -12321,7 +12335,7 @@ Error message and password prompt
 <div created="20180801074641338" modified="20180801074743274" title="$:/SiteTitle">
 <pre>tg-c</pre>
 </div>
-<div created="20180801074252370" modified="20180801074252370" title="$:/state/showeditpreview">
+<div created="20180801074252370" modified="20180801083608354" title="$:/state/showeditpreview">
 <pre>yes</pre>
 </div>
 <div created="20180731085211221" modified="20180801074203849" title="$:/state/tab/sidebar--1835078512">
@@ -12493,25 +12507,63 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20180801074206508" modified="20180801074227003" tags="" title="c">
+<div created="20180801074206508" modified="20180801083355019" tags="code" title="c">
 <pre>* [[Learn C - Free Interactive C Tutorial|http://www.learn-c.org/about]]</pre>
 </div>
-<div created="20180801074305890" modified="20180801074311818" tags="" title="python">
+<div created="20180801093003571" modified="20180801093003571" title="cli">
+<pre></pre>
+</div>
+<div created="20180801083726537" modified="20180801083736321" tags="git" title="git diff">
+<pre></pre>
+</div>
+<div created="20180801093024506" modified="20180801093024506" title="gui">
+<pre></pre>
+</div>
+<div created="20180801083518307" modified="20180801092858540" tags="cli shell" title="picocom">
+<pre>
+```
+sudo picocom -b 115200 /dev/ttyUSB0
+sudo picocom -b 115200 /dev/ttyUSB1
+sudo picocom -b 115200 /dev/ttyUSB2
+```
+</pre>
+</div>
+<div created="20180801074305890" modified="20180801083411059" tags="code" title="python">
 <pre>* [[Learn Python - Free Interactive Python Tutorial|https://www.learnpython.org/]]</pre>
 </div>
-<div created="20180801074248234" modified="20180801074253522" tags="" title="shell">
+<div created="20180801074248234" modified="20180801092834763" tags="code cli" title="shell">
 <pre>* [[Learn Shell Programming - Free Interactive Shell Programming Tutorial|https://www.learnshell.org/]]</pre>
 </div>
-<div created="20180801074348369" modified="20180801075748230" tags="" title="tiddlywiki">
+<div created="20180801074348369" modified="20180801093059073" tags="app gui" title="tiddlywiki">
 <pre>! tutorial
 * [[TiddlyWiki 舞 — 基礎文件正體中文版|http://tw5-zh.tiddlyspot.com/]]
 * [[TiddlyWiki 使用教學中文版 - 以專注於內容的一般使用者觀點出發！|http://web.nlhs.tyc.edu.tw/~lss/wiki/TiddlyWikiTutorialTW.html]]
 !index
 * GettingStarted
+!tag
+* (example) tiddler list of tag &quot;shell&quot;:
+** {{{ [tag[shell]] }}}
+* (example) tiddler list of tag &quot;code&quot;:
+** {{{ [tag[code]] }}}
 !本網站產生方式
 # 儲存官方的 tiddlywiki 檔案, 命名為 index.html
 # 參考 [[使用 GitHub 免費製作個人網站 為你自己學 Git|https://gitbook.tw/chapters/github/using-github-pages.html]] 用 github page 架好靜態網站
 </pre>
+</div>
+<div created="20180801083717521" modified="20180801092810115" tags="shell cli" title="tig">
+<pre></pre>
+</div>
+<div created="20180801093011458" modified="20180801093042074" title="tshark">
+<pre>* [[gui]]: [[wireshark]]</pre>
+</div>
+<div created="20180801092923587" modified="20180801094630791" tags="app gui" title="wireshark">
+<pre>* [[cli]]: [[tshark]]
+* official site
+** [[Wireshark · Documentation|https://www.wireshark.org/docs/]]
+*** user's guide
+**** [[One huge page|https://www.wireshark.org/docs/wsug_html_chunked/]]
+**** [[multiple pages|https://www.wireshark.org/docs/wsug_html_chunked/]]
+***** [[11.2. Start Wireshark from the command line|https://www.wireshark.org/docs/wsug_html_chunked/ChCustCommandLine.html]]</pre>
 </div>
 
 </div>
