--- a/index.html
+++ b/index.html
@@ -12520,8 +12520,7 @@ Error message and password prompt
 <pre></pre>
 </div>
 <div created="20180801083518307" modified="20180801092858540" tags="cli shell" title="picocom">
-<pre>
-```
+<pre>```
 sudo picocom -b 115200 /dev/ttyUSB0
 sudo picocom -b 115200 /dev/ttyUSB1
 sudo picocom -b 115200 /dev/ttyUSB2
@@ -12553,8 +12552,9 @@ sudo picocom -b 115200 /dev/ttyUSB2
 <div created="20180801083717521" modified="20180801092810115" tags="shell cli" title="tig">
 <pre></pre>
 </div>
-<div created="20180801093011458" modified="20180801093042074" title="tshark">
-<pre>* [[gui]]: [[wireshark]]</pre>
+<div created="20180801093011458" modified="20180801094943445" title="tshark">
+<pre>* [[gui]]: [[wireshark]]
+* [[tshark学习笔记（一） - CSDN博客|https://blog.csdn.net/qq_34444097/article/details/80167273]]</pre>
 </div>
 <div created="20180801092923587" modified="20180801094630791" tags="app gui" title="wireshark">
 <pre>* [[cli]]: [[tshark]]
