--- a/index.html
+++ b/index.html
@@ -165,6 +165,8 @@ Error message and password prompt
 
 <li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/unfold-all</li>
 
+<li>$:/config/TimestampDisable</li>
+
 <li>$:/core</li>
 
 <li>$:/DefaultTiddlers</li>
@@ -180,6 +182,8 @@ Error message and password prompt
 <li>$:/SiteTitle</li>
 
 <li>$:/state/showeditpreview</li>
+
+<li>$:/state/tab-1749438307</li>
 
 <li>$:/state/tab/sidebar--1835078512</li>
 
@@ -270,6 +274,9 @@ Error message and password prompt
 </div>
 <div created="20180731085214894" modified="20180731085214894" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/unfold-all">
 <pre>show</pre>
+</div>
+<div created="20180802035412650" modified="20180802035432391" title="$:/config/TimestampDisable">
+<pre>yes</pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="" description="TiddlyWiki5 core" list="readme" plugin-priority="0" plugin-type="plugin" title="$:/core" type="application/json" version="5.1.17">
 <pre>{
@@ -12338,7 +12345,10 @@ Error message and password prompt
 <div created="20180801074252370" modified="20180801083608354" title="$:/state/showeditpreview">
 <pre>yes</pre>
 </div>
-<div created="20180731085211221" modified="20180801074203849" title="$:/state/tab/sidebar--1835078512">
+<div created="20180802035350144" modified="20180802035350144" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Settings</pre>
+</div>
+<div created="20180731085211221" modified="20180802035408560" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div list="" title="$:/StoryList">
@@ -12533,17 +12543,21 @@ sudo picocom -b 115200 /dev/ttyUSB2
 <div created="20180801074248234" modified="20180801092834763" tags="code cli" title="shell">
 <pre>* [[Learn Shell Programming - Free Interactive Shell Programming Tutorial|https://www.learnshell.org/]]</pre>
 </div>
-<div created="20180801074348369" modified="20180801093059073" tags="app gui" title="tiddlywiki">
-<pre>! tutorial
-* [[TiddlyWiki 舞 — 基礎文件正體中文版|http://tw5-zh.tiddlyspot.com/]]
-* [[TiddlyWiki 使用教學中文版 - 以專注於內容的一般使用者觀點出發！|http://web.nlhs.tyc.edu.tw/~lss/wiki/TiddlyWikiTutorialTW.html]]
-!index
+<div created="20180801074348369" modified="20180802034844421" tags="app gui" title="tiddlywiki">
+<pre>!index
 * GettingStarted
+!link to local file / folder
+* [[this folder|file:./]]
+!tiddlymap
+* [[TiddlyMap.org | Wiki-Based Concept-Mapping Software|http://tiddlymap.org/]]
 !tag
 * (example) tiddler list of tag &quot;shell&quot;:
 ** {{{ [tag[shell]] }}}
 * (example) tiddler list of tag &quot;code&quot;:
 ** {{{ [tag[code]] }}}
+! tutorial
+* [[TiddlyWiki 舞 — 基礎文件正體中文版|http://tw5-zh.tiddlyspot.com/]]
+* [[TiddlyWiki 使用教學中文版 - 以專注於內容的一般使用者觀點出發！|http://web.nlhs.tyc.edu.tw/~lss/wiki/TiddlyWikiTutorialTW.html]]
 !本網站產生方式
 # 儲存官方的 tiddlywiki 檔案, 命名為 index.html
 # 參考 [[使用 GitHub 免費製作個人網站 為你自己學 Git|https://gitbook.tw/chapters/github/using-github-pages.html]] 用 github page 架好靜態網站
@@ -12556,14 +12570,38 @@ sudo picocom -b 115200 /dev/ttyUSB2
 <pre>* [[gui]]: [[wireshark]]
 * [[tshark学习笔记（一） - CSDN博客|https://blog.csdn.net/qq_34444097/article/details/80167273]]</pre>
 </div>
-<div created="20180801092923587" modified="20180801094630791" tags="app gui" title="wireshark">
+<div created="20180801092923587" modified="20180802035427377" tags="app gui" title="wireshark">
 <pre>* [[cli]]: [[tshark]]
-* official site
-** [[Wireshark · Documentation|https://www.wireshark.org/docs/]]
-*** user's guide
-**** [[One huge page|https://www.wireshark.org/docs/wsug_html_chunked/]]
-**** [[multiple pages|https://www.wireshark.org/docs/wsug_html_chunked/]]
-***** [[11.2. Start Wireshark from the command line|https://www.wireshark.org/docs/wsug_html_chunked/ChCustCommandLine.html]]</pre>
+* official site &gt; [[Wireshark · Documentation|https://www.wireshark.org/docs/]] &gt; wsug (user's guide)
+** [[One huge page|https://www.wireshark.org/docs/wsug_html_chunked/]]
+** [[multiple pages|https://www.wireshark.org/docs/wsug_html_chunked/]]
+*** [[11.2. Start Wireshark from the command line|https://www.wireshark.org/docs/wsug_html_chunked/ChCustCommandLine.html]]
+* user guide 翻譯: [[Wiresahrk用户手册|http://man.lupaworld.com/content/network/wireshark/index.html]]
+** [[第 6 章 处理已经捕捉的包|http://man.lupaworld.com/content/network/wireshark/chek_packet.html]]
+*** [[6.3. 浏览时过滤包|http://man.lupaworld.com/content/network/wireshark/c6.3.html]]
+*** [[6.7. 查找包|http://man.lupaworld.com/content/network/wireshark/c6.7.html#c6.7.1]]
+* [[dfref (Wireshark · Display Filter Reference: Index)|https://www.wireshark.org/docs/dfref/]]
+|[[wlan|https://www.wireshark.org/docs/dfref/w/wlan.html]]|wlan.fc.type_subtype==0x0008|beacon|
+|[[wlan_mgt|https://www.wireshark.org/docs/dfref/w/wlan_mgt.html]]|wlan_mgt.vht.op.channelwidth|bandwidth|
+
+|Frame 1: 287 bytes on wire (2296 bits), 287 bytes captured (2296 bits) on interface 0||
+|Radiotap Header v0, Length 18||
+|802.11 radio information||
+|IEEE 802.11 Beacon frame, Flags: ........C||
+|IEEE 802.11 wireless LAN management frame||
+|- Tagged parameters (229 bytes)||
+|- - Tag: HT Capabilities (802.11n D1.10)||
+|- - - HT Capabilities Info: 0x09ad||
+|- - - - .... .... .... ..0. = HT Support channel width: Transmitter only supports 20MHz operation||
+|- - - - .... .... ..1. .... = HT Short GI for 20MHz: Supported||
+|- - - - .... .... .0.. .... = HT Short GI for 40MHz: Not supported||
+|- - - - .... .... .1.. .... = HT Short GI for 40MHz: Supported||
+|- - Tag: VHT Capabilities (IEEE Std 802.11ac/D3.1)||
+|- - - VHT Capabilities Info: 0x338b79f2||
+|- - - - .... .... .... .... .... .... .... 00.. = Supported Channel Width Set: Neither 160MHz nor 80+80 supported (0x0)||
+|- - - - .... .... .... .... .... .... ..1. .... = Short GI for 80MHz: Supported||
+|- - - - .... .... .... .... .... .... .1.. .... = Short GI for 160MHz and 80+80MHz: Supported||
+</pre>
 </div>
 
 </div>
