--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
 OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE." />
 <link id="faviconLink" rel="shortcut icon" href="favicon.ico">
-<title>tg-c — tw</title>
+<title>hc-tw-gh — tw</title>
 <!--~~ This is a Tiddlywiki file. The points of interest in the file are marked with this pattern ~~--><!--~~ Raw markup ~~-->
 
 
@@ -191,6 +191,8 @@ Error message and password prompt
 
 <li>$:/temp/info-plugin</li>
 
+<li>$:/temp/search</li>
+
 <li>$:/themes/tiddlywiki/snowwhite</li>
 
 <li>$:/themes/tiddlywiki/vanilla</li>
@@ -199,7 +201,11 @@ Error message and password prompt
 
 <li>cli</li>
 
+<li>git</li>
+
 <li>git diff</li>
+
+<li>github page</li>
 
 <li>gui</li>
 
@@ -276,7 +282,7 @@ Error message and password prompt
 <pre>show</pre>
 </div>
 <div created="20180802035412650" modified="20180802035432391" title="$:/config/TimestampDisable">
-<pre>yes</pre>
+<pre>no</pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="" description="TiddlyWiki5 core" list="readme" plugin-priority="0" plugin-type="plugin" title="$:/core" type="application/json" version="5.1.17">
 <pre>{
@@ -12339,8 +12345,8 @@ Error message and password prompt
 <div created="20180801074702130" modified="20180801074702351" title="$:/SiteSubtitle">
 <pre>tw</pre>
 </div>
-<div created="20180801074641338" modified="20180801074743274" title="$:/SiteTitle">
-<pre>tg-c</pre>
+<div created="20180801074641338" modified="20180803013931039" title="$:/SiteTitle">
+<pre>hc-tw-gh</pre>
 </div>
 <div created="20180801074252370" modified="20180801083608354" title="$:/state/showeditpreview">
 <pre>yes</pre>
@@ -12407,6 +12413,9 @@ Error message and password prompt
         }
     }
 }</pre>
+</div>
+<div created="20180803012727050" modified="20180803013443768" title="$:/temp/search">
+<pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-priority="0" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.17">
 <pre>{
@@ -12523,8 +12532,16 @@ Error message and password prompt
 <div created="20180801093003571" modified="20180801093003571" title="cli">
 <pre></pre>
 </div>
+<div title="git">
+<pre></pre>
+</div>
 <div created="20180801083726537" modified="20180801083736321" tags="git" title="git diff">
 <pre></pre>
+</div>
+<div created="20180803012744336" modified="20180803013427257" tags="github gui" title="github page">
+<pre>!本網站產生方式
+# 儲存官方的 [[tiddlywiki]] 檔案, 命名為 index.html
+# 參考 [[使用 GitHub 免費製作個人網站 為你自己學 Git|https://gitbook.tw/chapters/github/using-github-pages.html]] 用 github page 架好靜態網站</pre>
 </div>
 <div created="20180801093024506" modified="20180801093024506" title="gui">
 <pre></pre>
@@ -12543,13 +12560,13 @@ sudo picocom -b 115200 /dev/ttyUSB2
 <div created="20180801074248234" modified="20180801092834763" tags="code cli" title="shell">
 <pre>* [[Learn Shell Programming - Free Interactive Shell Programming Tutorial|https://www.learnshell.org/]]</pre>
 </div>
-<div created="20180801074348369" modified="20180802034844421" tags="app gui" title="tiddlywiki">
+<div created="20180801074348369" modified="20180803013620624" tags="app gui" title="tiddlywiki">
 <pre>!index
 * GettingStarted
 !link to local file / folder
 * [[this folder|file:./]]
 !tiddlymap
-* [[TiddlyMap.org | Wiki-Based Concept-Mapping Software|http://tiddlymap.org/]]
+* [[TiddlyMap.org｜Wiki-Based Concept-Mapping Software|http://tiddlymap.org/]]
 !tag
 * (example) tiddler list of tag &quot;shell&quot;:
 ** {{{ [tag[shell]] }}}
@@ -12559,8 +12576,7 @@ sudo picocom -b 115200 /dev/ttyUSB2
 * [[TiddlyWiki 舞 — 基礎文件正體中文版|http://tw5-zh.tiddlyspot.com/]]
 * [[TiddlyWiki 使用教學中文版 - 以專注於內容的一般使用者觀點出發！|http://web.nlhs.tyc.edu.tw/~lss/wiki/TiddlyWikiTutorialTW.html]]
 !本網站產生方式
-# 儲存官方的 tiddlywiki 檔案, 命名為 index.html
-# 參考 [[使用 GitHub 免費製作個人網站 為你自己學 Git|https://gitbook.tw/chapters/github/using-github-pages.html]] 用 github page 架好靜態網站
+* 參考 [[github page]]
 </pre>
 </div>
 <div created="20180801083717521" modified="20180801092810115" tags="shell cli" title="tig">
