--- a/index.html
+++ b/index.html
@@ -12373,19 +12373,19 @@ Error message and password prompt
         },
         &quot;$:/info/url/full&quot;: {
             &quot;title&quot;: &quot;$:/info/url/full&quot;,
-            &quot;text&quot;: &quot;file:///tmp/waygong-note.github.io/index.html&quot;
+            &quot;text&quot;: &quot;https://waygong-note.github.io/&quot;
         },
         &quot;$:/info/url/host&quot;: {
             &quot;title&quot;: &quot;$:/info/url/host&quot;,
-            &quot;text&quot;: &quot;&quot;
+            &quot;text&quot;: &quot;waygong-note.github.io&quot;
         },
         &quot;$:/info/url/hostname&quot;: {
             &quot;title&quot;: &quot;$:/info/url/hostname&quot;,
-            &quot;text&quot;: &quot;&quot;
+            &quot;text&quot;: &quot;waygong-note.github.io&quot;
         },
         &quot;$:/info/url/protocol&quot;: {
             &quot;title&quot;: &quot;$:/info/url/protocol&quot;,
-            &quot;text&quot;: &quot;file:&quot;
+            &quot;text&quot;: &quot;https:&quot;
         },
         &quot;$:/info/url/port&quot;: {
             &quot;title&quot;: &quot;$:/info/url/port&quot;,
@@ -12393,7 +12393,7 @@ Error message and password prompt
         },
         &quot;$:/info/url/pathname&quot;: {
             &quot;title&quot;: &quot;$:/info/url/pathname&quot;,
-            &quot;text&quot;: &quot;/tmp/waygong-note.github.io/index.html&quot;
+            &quot;text&quot;: &quot;/&quot;
         },
         &quot;$:/info/url/search&quot;: {
             &quot;title&quot;: &quot;$:/info/url/search&quot;,
@@ -12401,7 +12401,7 @@ Error message and password prompt
         },
         &quot;$:/info/url/origin&quot;: {
             &quot;title&quot;: &quot;$:/info/url/origin&quot;,
-            &quot;text&quot;: &quot;file://&quot;
+            &quot;text&quot;: &quot;https://waygong-note.github.io&quot;
         },
         &quot;$:/info/browser/screen/width&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/width&quot;,
@@ -12538,10 +12538,10 @@ Error message and password prompt
 <div created="20180801083726537" modified="20180801083736321" tags="git" title="git diff">
 <pre></pre>
 </div>
-<div created="20180803012744336" modified="20180803013427257" tags="github gui" title="github page">
+<div created="20180803012744336" modified="20180803014509552" tags="github gui" title="github page">
 <pre>!本網站產生方式
-# 儲存官方的 [[tiddlywiki]] 檔案, 命名為 index.html
-# 參考 [[使用 GitHub 免費製作個人網站 為你自己學 Git|https://gitbook.tw/chapters/github/using-github-pages.html]] 用 github page 架好靜態網站</pre>
+# 參考 [[使用 GitHub 免費製作個人網站 為你自己學 Git|https://gitbook.tw/chapters/github/using-github-pages.html]] 用 github page 架好靜態網站
+# 儲存 [[tiddlywiki]] [[官方網站|https://tiddlywiki.com/]] 的檔案, 命名為 index.html, 就可按照 1. 的方式實現</pre>
 </div>
 <div created="20180801093024506" modified="20180801093024506" title="gui">
 <pre></pre>
@@ -12560,7 +12560,7 @@ sudo picocom -b 115200 /dev/ttyUSB2
 <div created="20180801074248234" modified="20180801092834763" tags="code cli" title="shell">
 <pre>* [[Learn Shell Programming - Free Interactive Shell Programming Tutorial|https://www.learnshell.org/]]</pre>
 </div>
-<div created="20180801074348369" modified="20180803013620624" tags="app gui" title="tiddlywiki">
+<div created="20180801074348369" modified="20180803014420658" tags="app gui" title="tiddlywiki">
 <pre>!index
 * GettingStarted
 !link to local file / folder
